--- a/trunk/mpyss.css
+++ b/trunk/mpyss.css
@@ -1,13 +1,62 @@
 
+body {
+    padding: 1em 2em;
+    font-family: sans-serif; 
+}
 
-.report table tr th {
+body, td, li {
+    font-size: 12pt;
+}
+
+div.menu ul {
+    margin: 0;
+}
+
+div.menu a:link, div.menu a:active, div.menu a:visited {
+    color: black;
+}
+
+div.reports {
+}
+
+div.reports table {
+    border: 0;
+}
+
+div.reports table tr th {
     border: 2px solid black;
-    background-color: #fdd;
-    padding: 1em;
+    background-color: #ddd;
+    font-weight: bold;
+    padding: 2px 10px;
 }
 
-.report table tr td {
+div.reports table tr td {
     border: 1px solid black;
-    padding: 0.2em 1em;
+    padding: 2px 10px;
 }
+
+div.reports div.small_links {
+    float: right;
+    font-size: 70%;
+}
+
+div.reports div.small_links a {
+    color: black;
+}
+
+p.footer {
+    font-size: 75%;
+    text-align: center;
+}
+
+h1,h2,th,caption {
+    font-family: Arial;
+}
+
+h1,h2 {
+    text-align: center;
+    background-color: lightgray;
+    font-style: italic;
+}
+
 
